<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileActivity">

    <ImageView
        android:id="@+id/logo_profile_asset"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_PROFILEACTIVITY_logo_profile_asset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/icon_profile" />

    <ImageView
        android:id="@+id/logo_menu_asset"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cd_PROFILEACTIVITY_logo_menu_asset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logo_profile_asset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/icon_menu" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="0dp"
        android:layout_height="124dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="130dp"
        android:contentDescription="@string/cd_PROFILEACTIVITY_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/perfil_ale" />

    <ImageView
        android:id="@+id/logo_add_photo_asset"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/cd_PROFILEACTIVITY_logo_add_photo_asset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/icon_add_camera" />

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/correo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/correotest"
        android:textColor="#B1B1B1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9C5CF5"
        android:text="@string/cambiar_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo_textView"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C5CF5"
        android:text="@string/cambiar_contraseña"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_correo"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_contrasena2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9C5CF5"
        android:text="@string/envia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_problem"
        app:layout_constraintVertical_bias="0.084"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9C5CF5"
        android:text="@string/cambiar_correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nombre"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/report_problem_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/problem_report"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contrasena"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_problem"
        android:layout_width="285dp"
        android:layout_height="131dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:inputType="textPersonName"
        android:lineSpacingExtra="14sp"
        android:text="@string/textbox_problem_report"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_problem_textView"
        app:layout_constraintVertical_bias="0.005"
        tools:ignore="LabelFor,SmallSp"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner_idiomas"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:entries="@array/idiomas"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contrasena2"
        app:layout_constraintVertical_bias="0.679"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>