<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/forgotPassword_textView"
        android:layout_width="196dp"
        android:layout_height="22dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_bttn"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/recuperaPassword_textView"
        android:layout_width="69dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/recupera_contraseña"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#8C5CF1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/forgotPassword_textView"
        app:layout_constraintTop_toBottomOf="@+id/github_bttn"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/signUp_textView"
        android:layout_width="82dp"
        android:layout_height="23dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#8C5CF1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/noCuenta_textView"
        app:layout_constraintTop_toBottomOf="@+id/recuperaPassword_textView"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/noCuenta_textView"
        android:layout_width="196dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/no_tienes_cuenta"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_textView"
        tools:ignore="TextSizeCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/introduceDatos_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/introduce_tus_datos"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduceDatos_textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="241dp"
        android:layout_height="25dp"
        android:layout_marginTop="428dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="102dp"
        android:layout_height="121dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_codebyte"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />

    <EditText
        android:id="@+id/email_emailText"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textView"
        tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/login_bttn"
        android:layout_width="343dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8D5CF2"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/google_bttn"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#EAEAEA"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/google"
        android:textColor="#1268B3"
        app:layout_constraintEnd_toStartOf="@+id/github_bttn"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keepSession_checkBox" />

    <Button
        android:id="@+id/github_bttn"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#425892"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keepSession_checkBox" />

    <CheckBox
        android:id="@+id/keepSession_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/keep_session_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bttn" />

</androidx.constraintlayout.widget.ConstraintLayout>